<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brov2_dvl</name>
  <version>0.0.0</version>
  <description>Driver for A50 DVL sensor.</description>
  <maintainer email="bjornar-rh@hotmail.com">Bjoernar Hogstad</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>brov2_interfaces</depend>
  <depend>sys</depend>


  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>


  <build_export_depend>geometry_msgs</build_export_depend>

  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>  
  <exec_depend>geometry_msgs</exec_depend>
  
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
