<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brov2_sonar</name>
  <version>0.0.0</version>
  <description>Driver for OSM Ethernet Sonar System.</description>
  <maintainer email="bjornar-rh@hotmail.com">Bjoernar Hogstad</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>brov2_interfaces</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!--Necessary for custom interfaces-->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
